# local-archer

./: .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.reports/: dead-code-analysis.md
archer/: __init__.py
archer/audio/: __init__.py  pipeline.py  player.py  recorder.py  vad.py
archer/core/: __init__.py  assistant.py  config.py
archer/llm/: __init__.py  base.py  ollama_llm.py
archer/stt/: __init__.py  base.py  whisper_stt.py
archer/tools/: __init__.py
archer/tts/: __init__.py  base.py  chatterbox_tts.py  pocket_tts.py
config/: default.yaml
config/personalities/: archer.yaml
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_app.py  test_assistant.py  test_chatterbox_tts.py  test_config.py  test_ollama_llm.py  test_pipeline.py  test_player.py  test_pocket_tts.py  test_recorder.py  test_vad.py  test_whisper_stt.py
